--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li-link:active {
 
 
 body {
-  background-color: slategray;
+  background-image: url('https://thumbs.dreamstime.com/b/wood-board-background-monotone-every-project-83066122.jpg');
 }
 
 .intro {
@@ -82,6 +82,7 @@ body {
   background-color: whitesmoke;
   font-family: 'Neucha', cursive;
   font-size: 1.5em;
+  border-radius: 30px;
 }
 
 h2 {
@@ -91,15 +92,19 @@ h2 {
   text-decoration-line: underline;
   border-style: solid;
   border-color: black;
+  font-size: 30px;
 }
 
 article {
   display: flex;
   justify-content: flex-start;
-  background-color: whitesmoke;
+  background-color: darkorange;
   font-family: 'Neucha', cursive;
   font-size: 1.5em;
   margin: 10px 40px
+  border-radius: 30px;
+  border-color: black;
+  border-style: solid;
 }
 
 .Kazakus {
@@ -108,6 +113,7 @@ article {
  background-color: black;
  max-width: 307px;
  height: 450px;
+ border-radius: 30px;
  }
 
  .Reno {
@@ -116,6 +122,7 @@ article {
   background-color: black;
   max-width: 307px;
   height: 450px;
+  border-radius: 30px;
   }
 
 .Alexstrasza {
@@ -124,6 +131,7 @@ article {
   background-color: black;
   max-width: 307px;
   height: 450px;
+  border-radius: 30px;
    }
 
 .Yogg {
@@ -132,6 +140,7 @@ article {
   background-color: black;
   max-width: 307px;
   height: 450px;
+  border-radius: 30px;
     }
 
 .Lich {
@@ -140,6 +149,7 @@ article {
   background-color: black;
   max-width: 307px;
   height: 450px;
+  border-radius: 30px;
   }
 
   .Deathwing {
@@ -148,6 +158,7 @@ article {
   background-color: black;
   max-width: 307px;
   height: 450px;
+  border-radius: 30px;
     }
 
   .Leeroy {
@@ -156,7 +167,35 @@ article {
   background-color: black;
   max-width: 307px;
   height: 450px;
+  border-radius: 30px;
    }
+
+  .Ragnaros {
+  margin: 30px 30px;
+  padding: 10px 10px;
+  background-color: black;
+  max-width: 307px;
+  height: 450px;
+  border-radius: 30px;
+     }
+.Boom {
+  margin: 30px 30px;
+  padding: 10px 10px;
+  background-color: black;
+  max-width: 307px;
+  height: 450px;
+  border-radius: 30px;
+       }
+
+
+.Tirion {
+ margin: 30px 30px;
+ padding: 10px 10px;
+ background-color: black;
+ max-width: 307px;
+ height: 450px;
+ border-radius: 30px;
+  }      
 
  .kazakus-article {
 align-items: center;
@@ -164,6 +203,9 @@ justify-content: center;
 margin: 15px 15px;
 padding: 10px 30px;
 background-color:#8cacea;
+border-radius: 30px;
+border-color: black;
+border-style: dashed;
  }
 
 .closing-nav {
@@ -171,7 +213,7 @@ display: flex;
 justify-content: center;
 margin: 30px 30px;
 padding 20px 20px;
-background-color: whitesmoke;
+background-color: darkslategrey;
 border-style: solid;
 border-color: black;
 }
